--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <style media="all" type="text/css">
       @import "./app/app.css?v=@version@";
     </style>
+    <script type="text/javascript">
+
+      window.appRequire = require;
+    </script>
   </head>
   <body>
     <div id="app"></div>
@@ -37,7 +41,7 @@
     -->
     <!-- <script charset="utf-8" src="./app/app.js?v=@version@"></script> -->
     <script type="text/javascript">
-      require('./source/scripts/app.js')
+      appRequire('./source/scripts/app.js')
     </script>
     <script charset="utf-8" src="./source/scripts/app.menu.js?v=@version@"></script>
   </body>
